Colaboratory を使用して作成しました

--- a/kaggle03bool.ipynb
+++ b/kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOrNjUNNc32Q+Q7x7t5S+3t",
+      "authorship_tag": "ABX9TyN1GxGgi3XR9kFttcimIO3z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,7 @@
       },
       "source": [
         "## ブール値の組み合わせ\n",
-        "`and`、`or`、`not`でブール値を組み合わせることができます。\n",
+        "`and`、`or`、`not`でブール値を組み合わせることができる。\n",
         "\n"
       ]
     },
@@ -199,7 +199,7 @@
         "colab_type": "text"
       },
       "source": [
-        "次の結果は想像がつきますか。"
+        "次の結果は想像してから実行する。"
       ]
     },
     {
@@ -239,9 +239,9 @@
         "colab_type": "text"
       },
       "source": [
-        "これを理解するためには、ブール演算の優先順位を考える必要があります。\n",
+        "これを理解するためには、ブール演算の優先順位を考える必要がある。\n",
         "\n",
-        "`and`は`or`より先に評価されますが、優先順位を覚えるよりも、カッコを使うことをおすすめします。\n"
+        "`and`は`or`より先に評価されるが、優先順位を覚えるよりも、カッコを使ったほうが簡単。\n"
       ]
     },
     {
@@ -262,9 +262,9 @@
       },
       "source": [
         "## 条件文\n",
-        "ブール型は`if、`elif`、`else`キーワードの条件文と組み合わせて使われる時に威力を発揮します。\n",
+        "ブール型は`if、`elif`、`else`キーワードの条件文と組み合わせて使われる時に威力を発揮する。\n",
         "\n",
-        "条件文は`if`文とも言われ、ブール型の条件の結果によって実行するコードをコントロールするものです。\n",
+        "条件文は`if`文とも言われ、ブール型の条件の結果によって実行するコードをコントロールするもの。\n",
         "\n"
       ]
     },
@@ -304,8 +304,19 @@
         "\n",
         "The if and else keywords are often used in other languages; its more unique keyword is elif, a contraction of \"else if\". In these conditional clauses, elif and else blocks are optional; additionally, you can include as many elif statements as you would like.\n",
         "\n",
-        "Note especially the use of colons (:) and whitespace to denote separate blocks of code. This is similar to what happens when we define a function - the function header ends with :, and the following line is indented with 4 spaces. All subsequent indented lines belong to the body of the function, until we encounter an unindented line, ending the function definition.\n",
+        "Note especially the use of colons (:) and whitespace to denote separate blocks of code. This is similar to what happens when we define a function - the function header ends with :, and the following line is indented with 4 spaces. All subsequent indented lines belong to the body of the function, until we encounter an unindented line, ending the function definition.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JLgRuczLjCX2",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
+        "\n",
+        "```\n",
         "def f(x):\n",
         "    if x > 0:\n",
         "        print(\"Only printed when x is positive; x =\", x)\n",
@@ -317,8 +328,7 @@
         "Only printed when x is positive; x = 1\n",
         "Also only printed when x is positive; x = 1\n",
         "Always printed, regardless of x's value; x = 1\n",
-        "Always printed, regardless of x's value; x = 0\n",
-        "\n"
+        "Always printed, regardless of x's value; x = 0\n"
       ]
     },
     {
@@ -330,8 +340,18 @@
       "source": [
         "\n",
         "Boolean conversion\n",
-        "We've seen int(), which turns things into ints, and float(), which turns things into floats, so you might not be surprised to hear that Python has a bool() function which turns things into bools.\n",
+        "We've seen int(), which turns things into ints, and float(), which turns things into floats, so you might not be surprised to hear that Python has a bool() function which turns things into bools.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H7jUdBsSjM2N",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
+        "```\n",
         "print(bool(1)) # all numbers are treated as true, except 0\n",
         "print(bool(0))\n",
         "print(bool(\"asf\")) # all strings are treated as true, except the empty string \"\"\n",
@@ -342,12 +362,14 @@
         "False\n",
         "True\n",
         "False\n",
+        "```\n",
         "We can use non-boolean objects in if conditions and other places where a boolean would be expected. Python will implicitly treat them as their corresponding boolean value:\n",
-        "\n",
+        "```\n",
         "if 0:\n",
         "    print(0)\n",
         "elif \"spam\":\n",
         "    print(\"spam\")\n",
+        "```    \n",
         "spam\n",
         "Your Turn\n",
         "You probably don't realize how much you can do with the parts of Python you've learned so far. Go try the Hands on coding problems and you'll be pleasantly surprised about how much you can do.\n",
@@ -355,6 +377,417 @@
         "Python Home Page\n",
         "\n",
         "Have questions or comments? Visit the Learn Discussion forum to chat with other Learners."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E6svb0nyjgLi",
+        "colab_type": "text"
+      },
+      "source": [
+        "Try It Yourself\n",
+        "Think you are ready to use Booleans and Conditionals? Try it yourself and find out.\n",
+        "\n",
+        "To get started, run the setup code below before writing your own code (and if you leave this notebook and come back later, don't forget to run the setup code again).\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "from learntools.core import binder; binder.bind(globals())\n",
+        "from learntools.python.ex3 import *\n",
+        "print('Setup complete.')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Exercises\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "1.\n",
+        "Many programming languages have sign available as a built-in function. Python doesn't, but we can define our own!\n",
+        "\n",
+        "In the cell below, define a function called sign which takes a numerical argument and returns -1 if it's negative, 1 if it's positive, and 0 if it's 0.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Your code goes here. Define a function called 'sign'\n",
+        "​\n",
+        "# Check your answer\n",
+        "q1.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q1.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "2.\n",
+        "We've decided to add \"logging\" to our to_smash function from the previous exercise.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def to_smash(total_candies):\n",
+        "    \"\"\"Return the number of leftover candies that must be smashed after distributing\n",
+        "    the given number of candies evenly between 3 friends.\n",
+        "    \n",
+        "    >>> to_smash(91)\n",
+        "    1\n",
+        "    \"\"\"\n",
+        "    print(\"Splitting\", total_candies, \"candies\")\n",
+        "    return total_candies % 3\n",
+        "​\n",
+        "to_smash(91)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "What happens if we call it with total_candies = 1?\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "to_smash(1)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "That isn't great grammar!\n",
+        "\n",
+        "Modify the definition in the cell below to correct the grammar of our print statement. (If there's only one candy, we should use the singular \"candy\" instead of the plural \"candies\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def to_smash(total_candies):\n",
+        "    \"\"\"Return the number of leftover candies that must be smashed after distributing\n",
+        "    the given number of candies evenly between 3 friends.\n",
+        "    \n",
+        "    >>> to_smash(91)\n",
+        "    1\n",
+        "    \"\"\"\n",
+        "    print(\"Splitting\", total_candies, \"candies\")\n",
+        "    return total_candies % 3\n",
+        "​\n",
+        "to_smash(91)\n",
+        "to_smash(1)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# Check your answer (Run this code cell to receive credit!)\n",
+        "q2.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "3. 🌶️\n",
+        "In the main lesson we talked about deciding whether we're prepared for the weather. I said that I'm safe from today's weather if...\n",
+        "\n",
+        "I have an umbrella...\n",
+        "or if the rain isn't too heavy and I have a hood...\n",
+        "otherwise, I'm still fine unless it's raining and it's a workday\n",
+        "The function below uses our first attempt at turning this logic into a Python expression. I claimed that there was a bug in that code. Can you find it?\n",
+        "\n",
+        "To prove that prepared_for_weather is buggy, come up with a set of inputs where either:\n",
+        "\n",
+        "the function returns False (but should have returned True), or\n",
+        "the function returned True (but should have returned False).\n",
+        "To get credit for completing this question, your code should return a Correct result.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def prepared_for_weather(have_umbrella, rain_level, have_hood, is_workday):\n",
+        "    # Don't change this code. Our goal is just to find the bug, not fix it!\n",
+        "    return have_umbrella or rain_level < 5 and have_hood or not rain_level > 0 and is_workday\n",
+        "​\n",
+        "# Change the values of these inputs so they represent a case where prepared_for_weather\n",
+        "# returns the wrong answer.\n",
+        "have_umbrella = True\n",
+        "rain_level = 0.0\n",
+        "have_hood = True\n",
+        "is_workday = True\n",
+        "​\n",
+        "# Check what the function returns given the current values of the variables above\n",
+        "actual = prepared_for_weather(have_umbrella, rain_level, have_hood, is_workday)\n",
+        "print(actual)\n",
+        "​\n",
+        "# Check your answer\n",
+        "q3.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q3.hint()\n",
+        "#q3.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "4.\n",
+        "The function is_negative below is implemented correctly - it returns True if the given number is negative and False otherwise.\n",
+        "\n",
+        "However, it's more verbose than it needs to be. We can actually reduce the number of lines of code in this function by 75% while keeping the same behaviour.\n",
+        "\n",
+        "See if you can come up with an equivalent body that uses just one line of code, and put it in the function concise_is_negative. (HINT: you don't even need Python's ternary syntax)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def is_negative(number):\n",
+        "    if number < 0:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "​\n",
+        "def concise_is_negative(number):\n",
+        "    pass # Your code goes here (try to keep it to one line!)\n",
+        "​\n",
+        "# Check your answer\n",
+        "q4.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q4.hint()\n",
+        "#q4.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "5.\n",
+        "The boolean variables ketchup, mustard and onion represent whether a customer wants a particular topping on their hot dog. We want to implement a number of boolean functions that correspond to some yes-or-no questions about the customer's order. For example:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def onionless(ketchup, mustard, onion):\n",
+        "    \"\"\"Return whether the customer doesn't want onions.\n",
+        "    \"\"\"\n",
+        "    return not onion\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "For each of the remaining functions, fill in the body to match the English description in the docstring.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def wants_all_toppings(ketchup, mustard, onion):\n",
+        "    \"\"\"Return whether the customer wants \"the works\" (all 3 toppings)\n",
+        "    \"\"\"\n",
+        "    pass\n",
+        "​\n",
+        "# Check your answer\n",
+        "q5.a.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q5.a.hint()\n",
+        "#q5.a.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def wants_plain_hotdog(ketchup, mustard, onion):\n",
+        "    \"\"\"Return whether the customer wants a plain hot dog with no toppings.\n",
+        "    \"\"\"\n",
+        "    pass\n",
+        "​\n",
+        "# Check your answer\n",
+        "q5.b.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q5.b.hint()\n",
+        "#q5.b.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def exactly_one_sauce(ketchup, mustard, onion):\n",
+        "    \"\"\"Return whether the customer wants either ketchup or mustard, but not both.\n",
+        "    (You may be familiar with this operation under the name \"exclusive or\")\n",
+        "    \"\"\"\n",
+        "    pass\n",
+        "​\n",
+        "# Check your answer\n",
+        "q5.c.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q5.c.hint()\n",
+        "#q5.c.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "6. 🌶️\n",
+        "We’ve seen that calling bool() on an integer returns False if it’s equal to 0 and True otherwise. What happens if we call int() on a bool? Try it out in the notebook cell below.\n",
+        "\n",
+        "Can you take advantage of this to write a succinct function that corresponds to the English sentence \"does the customer want exactly one topping?\"?\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def exactly_one_topping(ketchup, mustard, onion):\n",
+        "    \"\"\"Return whether the customer wants exactly one of the three available toppings\n",
+        "    on their hot dog.\n",
+        "    \"\"\"\n",
+        "    pass\n",
+        "​\n",
+        "# Check your answer\n",
+        "q6.check()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "#q6.hint()\n",
+        "#q6.solution()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "7. 🌶️ (Optional)\n",
+        "In this problem we'll be working with a simplified version of blackjack (aka twenty-one). In this version there is one player (who you'll control) and a dealer. Play proceeds as follows:\n",
+        "\n",
+        "The player is dealt two face-up cards. The dealer is dealt one face-up card.\n",
+        "The player may ask to be dealt another card ('hit') as many times as they wish. If the sum of their cards exceeds 21, they lose the round immediately.\n",
+        "The dealer then deals additional cards to himself until either:\n",
+        "the sum of the dealer's cards exceeds 21, in which case the player wins the round\n",
+        "the sum of the dealer's cards is greater than or equal to 17. If the player's total is greater than the dealer's, the player wins. Otherwise, the dealer wins (even in case of a tie).\n",
+        "When calculating the sum of cards, Jack, Queen, and King count for 10. Aces can count as 1 or 11 (when referring to a player's \"total\" above, we mean the largest total that can be made without exceeding 21. So e.g. A+8 = 19, A+8+8 = 17)\n",
+        "\n",
+        "For this problem, you'll write a function representing the player's decision-making strategy in this game. We've provided a very unintelligent implementation below:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
+        "    \"\"\"Return True if the player should hit (request another card) given the current game\n",
+        "    state, or False if the player should stay.\n",
+        "    When calculating a hand's total value, we count aces as \"high\" (with value 11) if doing so\n",
+        "    doesn't bring the total above 21, otherwise we count them as low (with value 1). \n",
+        "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
+        "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
+        "    \"\"\"\n",
+        "    return False\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "This very conservative agent always sticks with the hand of two cards that they're dealt.\n",
+        "\n",
+        "We'll be simulating games between your player agent and our own dealer agent by calling your function.\n",
+        "\n",
+        "Try running the function below to see an example of a simulated game:\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "q7.simulate_one_game()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "The real test of your agent's mettle is their average win rate over many games. Try calling the function below to simulate 50000 games of blackjack (it may take a couple seconds):\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "q7.simulate(n_games=50000)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Our dumb agent that completely ignores the game state still manages to win shockingly often!\n",
+        "\n",
+        "Try adding some more smarts to the should_hit function and see how it affects the results.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "def should_hit(dealer_total, player_total, player_low_aces, player_high_aces):\n",
+        "    \"\"\"Return True if the player should hit (request another card) given the current game\n",
+        "    state, or False if the player should stay.\n",
+        "    When calculating a hand's total value, we count aces as \"high\" (with value 11) if doing so\n",
+        "    doesn't bring the total above 21, otherwise we count them as low (with value 1). \n",
+        "    For example, if the player's hand is {A, A, A, 7}, we will count it as 11 + 1 + 1 + 7,\n",
+        "    and therefore set player_total=20, player_low_aces=2, player_high_aces=1.\n",
+        "    \"\"\"\n",
+        "    return False\n",
+        "​\n",
+        "q7.simulate(n_games=50000)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Keep Going\n",
+        "Learn about lists and tuples to handle multiple items of data in a systematic way."
       ]
     }
   ]
