--- a/kaggle03bool.ipynb
+++ b/kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1GxGgi3XR9kFttcimIO3z",
+      "authorship_tag": "ABX9TyP/T9kwTnfIyk8A8ACcAeWb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,8 @@
         "# メモ\n",
         "\n",
         "1. kaggleのpython tutorialをベースにColabベースのノートブックを作成しているうちの1つ。\n",
+        "\n",
+        "1. Colabで開いて読まれることを想定。\n",
         "\n",
         "1. 元ファイル ( https://www.kaggle.com/colinmorris/booleans-and-conditionals)\n"
       ]
@@ -126,6 +128,8 @@
         "outputId": "03cb6a71-8b10-44e4-9695-70abf7f29fdf"
       },
       "source": [
+        "# 引数に年齢を入れて呼び出すと、アメリカの大統領に立候補できる年齢かどうかを判定する\n",
+        "\n",
         "def can_run_for_president(age):\n",
         "    \"\"\"Can someone of the given age run for president in the US?\"\"\"\n",
         "    # The US Constitution says you must be at least 35 years old\n",
@@ -170,6 +174,8 @@
         "outputId": "de5c289d-89a8-4441-fb18-82fe98125210"
       },
       "source": [
+        "#引数に年齢とアメリカ生まれかどうかを入れて呼び出すと、アメリカの大統領に立候補することが法律上できるかどうかを判定してTrueまたはFalseを返す\n",
+        "\n",
         "def can_run_for_president(age, is_natural_born_citizen):\n",
         "    \"\"\"Can someone of the given age and citizenship status run for president in the US?\"\"\"\n",
         "    # The US Constitution says you must be a natural born citizen *and* at least 35 years old\n",
@@ -199,7 +205,7 @@
         "colab_type": "text"
       },
       "source": [
-        "次の結果は想像してから実行する。"
+        "次のコードの結果を考えてから実行してみよう。"
       ]
     },
     {
@@ -241,17 +247,9 @@
       "source": [
         "これを理解するためには、ブール演算の優先順位を考える必要がある。\n",
         "\n",
-        "`and`は`or`より先に評価されるが、優先順位を覚えるよりも、カッコを使ったほうが簡単。\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "e3LzMgpIuz1e",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ\n"
+        "`and`は`or`より先に評価される。\n",
+        "\n",
+        "しかし、優先順位を覚えるよりも、なるべくカッコを使ってわかりやすくする方が大切。\n"
       ]
     },
     {
@@ -273,9 +271,15 @@
       "metadata": {
         "id": "fOftabML70ku",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b79a224d-12bc-488d-e1ff-31929311a40d"
       },
       "source": [
+        "# 引数がゼロか、正か、負かを判定して文字列で返す\n",
+        "\n",
         "def inspect(x):\n",
         "    if x == 0:\n",
         "        print(x, \"is zero\")\n",
@@ -289,8 +293,17 @@
         "inspect(0)\n",
         "inspect(-15)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 is zero\n",
+            "-15 is negative\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -300,11 +313,24 @@
       },
       "source": [
         "\n",
-        "#いまここ\n",
+        "# いまここ\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QbFg_YXFUxF-",
+        "colab_type": "text"
+      },
+      "source": [
+        "ifおよびelseキーワードは他の言語でよく使用されます。 よりユニークなキーワードは「else if」の短縮形であるelifです。 これらの条件節では、elifおよびelseブロックはオプションです。 さらに、必要な数のelifステートメントを含めることができます。\n",
+        "\n",
+        "特に、コロンと空白を使用して、コードの個別のブロックを示すことに注意してください。 これは、関数を定義したときに起こることと似ています-関数のヘッダーが：で終わり、次の行は4つのスペースでインデントされています。 インデントされていない行に出会い、関数定義を終了するまで、以降のすべてのインデントされた行は関数の本体に属します。\n",
         "\n",
         "The if and else keywords are often used in other languages; its more unique keyword is elif, a contraction of \"else if\". In these conditional clauses, elif and else blocks are optional; additionally, you can include as many elif statements as you would like.\n",
         "\n",
-        "Note especially the use of colons (:) and whitespace to denote separate blocks of code. This is similar to what happens when we define a function - the function header ends with :, and the following line is indented with 4 spaces. All subsequent indented lines belong to the body of the function, until we encounter an unindented line, ending the function definition.\n"
+        "Note especially the use of colons  and whitespace to denote separate blocks of code. This is similar to what happens when we define a function - the function header ends with :, and the following line is indented with 4 spaces. All subsequent indented lines belong to the body of the function, until we encounter an unindented line, ending the function definition.\n"
       ]
     },
     {
