Colaboratory を使用して作成しました

--- a/kaggle03bool.ipynb
+++ b/kaggle03bool.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle03bool.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/U4AreleyD1C7OczrqDs0",
+      "authorship_tag": "ABX9TyPSg1YG5wIBLdw3jF3JGySU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. kaggleのpython tutorialをベースにColabベースのノートブックを作成しているうちの1つ。\n",
+        "1. kaggleのPython tutorialをベースにColabベースのノートブックを作成しているうちの1つ。\n",
         "\n",
         "1. Colabで開いて読まれることを想定。\n",
         "\n",
@@ -308,25 +308,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ii0zA2kj7wsm",
-        "colab_type": "text"
-      },
-      "source": [
-        "\n",
-        "# いまここ\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "QbFg_YXFUxF-",
         "colab_type": "text"
       },
       "source": [
-        "pythonの条件文はifで始まり、elifおよびelseブロックはオプションであってもなくてもよい。「else if」の短縮形であるelifは、綴りが特別なので注意する。\n",
+        "Pythonの条件文はifで始まり、elifおよびelseブロックはオプションであってもなくてもよい。「else if」の短縮形であるelifは、綴りが特別なので注意する。\n",
         "\n",
-        "また、if節、elif節、else節にコロンがつくことが慣れないうちは忘れがちなので注意する。"
+        "また、if節、elif節、else節にコロンがつくことが慣れないうちは忘れがちなので注意する。\n",
+        "\n",
+        "考察: なぜ `else if`でなくて`elif`なのか。他の言語で`else if`と書くのをPythonで実現すると\n",
+        "```\n",
+        "    else:\n",
+        "        if x <  0 :\n",
+        "            print (\"This is inside else if\")\n",
+        "```\n",
+        "となってしまい一気にインデントが2回必要になる。これを避けるため、というのがひとつ。もう一つはRubyも同じだがifの後置が可能な言語の場合、ifの中のifを先に評価する文法が必要で普通のifと区別するため、ではないか。\n",
+        "\n",
+        "\n",
+        "      "
       ]
     },
     {
@@ -336,9 +335,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 86
         },
-        "outputId": "f1f01681-1fc8-48d3-d384-7b6914b6194d"
+        "outputId": "7aab3d93-2d03-482e-ab24-a13641c120a7"
       },
       "source": [
         "def f(x):\n",
@@ -350,7 +349,7 @@
         "f(1)\n",
         "f(0)"
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +374,7 @@
         "\n",
         "なにがTrueでなにがFalseなのか。\n",
         "\n",
-        "pythonでは`0`と空文字列、空リスト、などがFalseでそれ以外はTrue。\n",
+        "Pythonでは`0`と空文字列、空リスト、などがFalseでそれ以外はTrue。\n",
         "\n",
         "あらゆる値を真偽値に変換する関数`bool()`があり、`int()`や`float()`のように使う。\n"
       ]
@@ -399,7 +398,7 @@
         "print(bool(\"\"))\n",
         "print(bool([]))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,60 +417,125 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ii0zA2kj7wsm",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "# いまここ\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "E6svb0nyjgLi",
         "colab_type": "text"
       },
       "source": [
-        "Try It Yourself\n",
-        "Think you are ready to use Booleans and Conditionals? Try it yourself and find out.\n",
-        "\n",
-        "To get started, run the setup code below before writing your own code (and if you leave this notebook and come back later, don't forget to run the setup code again).\n",
+        "# 練習問題\n",
         "\n",
         "\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F3D9leh9NybG",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 1\n",
+        "\n",
+        "数値の引数を取り、負の場合は-1、正の場合は1、0の場合は0を返す、signと呼ばれる関数を定義する。多くのプログラミング言語にはあって、Pythonの組み込み関数にはないもの。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mFIE3xODPi9u",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "d5290f5a-826c-41e9-9dc9-2d304994c9bc"
+      },
+      "source": [
+        "# Define a function which takes a numerical argument and returns -1 if it's negative, 1 if it's positive and 0 otherwise\n",
+        "def sign (x) :\n",
+        "    if x < 0 :\n",
+        "        return -1\n",
+        "    elif x > 0 :\n",
+        "        return 1\n",
+        "    else :\n",
+        "        return 0\n",
+        "\n",
+        "print (sign(-1))\n",
+        "print (sign(1))\n",
+        "print (sign(0))\n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-1\n",
+            "1\n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7RYeqZaoPhw5",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 2\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FPQ-F_NoQcm9",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 2\n",
+        "\n",
+        "`to_smash`という関数を作り、引数で与えられた数を3で割った余りを返す。その際、\n",
+        "\"Splitting n candies\"と表示する。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eEk8XRhuSVvP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "woPhDqq0SHw_",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "\n",
-        "\n",
-        "from learntools.core import binder; binder.bind(globals())\n",
-        "from learntools.python.ex3 import *\n",
-        "print('Setup complete.')\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Exercises\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "1.\n",
-        "Many programming languages have sign available as a built-in function. Python doesn't, but we can define our own!\n",
-        "\n",
-        "In the cell below, define a function called sign which takes a numerical argument and returns -1 if it's negative, 1 if it's positive, and 0 if it's 0.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Your code goes here. Define a function called 'sign'\n",
-        "​\n",
-        "# Check your answer\n",
-        "q1.check()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "#q1.solution()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "2.\n",
         "We've decided to add \"logging\" to our to_smash function from the previous exercise.\n",
         "\n",
         "\n",
